--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "go-programming-model"]
 	path = go-programming-model
 	url = https://github.com/my-Sakura/go-programming-model.git
+[submodule "telegram_translate_bot"]
+	path = telegram_translate_bot
+	url = https://github.com/my-Sakura/telegram_translate_bot.git
