add chart submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "chatroom"]
 	path = chatroom
 	url = https://github.com/my-Sakura/chatroom.git
+[submodule "chart"]
+	path = chart
+	url = https://github.com/my-Sakura/chart.git
