add tour-of-rust submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "osquery"]
 	path = osquery
 	url = https://github.com/my-Sakura/osquery.git
+[submodule "tour-of-the-rust"]
+	path = tour-of-the-rust
+	url = https://github.com/my-Sakura/tour-of-the-rust.git
