add flutter_demo submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "vercel"]
 	path = vercel
 	url = https://github.com/my-Sakura/vercel.git
+[submodule "flutter_demo"]
+	path = flutter_demo
+	url = https://github.com/my-Sakura/flutter_demo.git
