--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "flutter_demo"]
 	path = flutter_demo
 	url = https://github.com/my-Sakura/flutter_demo.git
+[submodule "flutter-study"]
+	path = flutter-study
+	url = https://github.com/my-Sakura/flutter-study.git
